# microlearning-api

./: Dockerfile  README.md  arslan.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  arslan.txt  ci.yml  pull_request_template.md
.github/workflows/: ci.yml
app/api/: flash_cards.py  users.py
app/db/: database.py
app/models/: flash_cards.py
app/routers/: users.py
app/services/: flash_cards_service.py
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: README.md
backend/app/routers/: flash_cards.py
backend/tests/: test_main.py
frontend/: Dockerfile
frontend/src/: App.js
frontend/src/components/login/: index.js  login.jsx  login.module.css
frontend/src/components/register/: register.jsx  register.module.css
tests/: test_main.py
